force-app/main/default/objects/Reviewer_Tasks__mdt/Reviewer_Tasks__mdt.object-meta.xml
<CustomObject>
    <description>This metadata contains information about the tasks that gets generated for a BLA (Business License Application) when a reviewer changes the status to &apos;Awaiting Review</description>
    <label>Reviewer Tasks</label>
    <pluralLabel>Reviewer Tasks</pluralLabel>
</CustomObject>