force-app/main/default/objects/Reviewer_Tasks__mdt/fields/Map_Review_Activity__c.field-meta.xml
<CustomField>
    <fullName>Map_Review_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this checkbox will enable the rendition of maps on the task</inlineHelpText>
    <label>Map Review Activity</label>
    <type>Checkbox</type>
</CustomField>