force-app/main/default/objects/Reviewer_Tasks__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLA</fullName>
                <default>true</default>
                <label>BLA</label>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>